<resources>
    <string name="app_name">We Zain</string>
    <string name="field_req">Field required</string>
    <string name="failed">Failed</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait...</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="skip">Skip</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="choose_language"><![CDATA[Choose <font color="#F61C00">Language</font>]]></string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="categories">Category</string>
    <string name="offers">Offers</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="resend2">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="ok">Ok</string>
    <string name="favorite_offers">Flash sale</string>
    <string name="show_all">Show All</string>
    <string name="phone">phone</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="favourite">Favourite</string>
    <string name="addresses">Address</string>
    <string name="setting">Setting</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact us</string>
    <string name="helping">Helping</string>
    <string name="contact_us2">Contact Us</string>
    <string name="discount">Discount</string>
    <string name="fast">Fast</string>
    <string name="no_orders_to_show">No Orders To Show</string>
    <string name="most_seller">Recommended</string>
    <string name="something">Check internet connection</string>
    <string name="upcoming_products">New products</string>
    <string name="aed">AED</string>
    <string name="tl">TL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="inv_email">Invalid email</string>
    <string name="password_short">Password is too short</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country_code">Country Code</string>
    <string name="uae">UAE</string>
    <string name="turkey">Turkey</string>
    <string name="departments">Departments</string>
    <string name="em_ph_exist">Email or phone is exist</string>
    <string name="user_not_exist">User is not exist</string>
    <string name="search">Search...</string>
    <string name="details">Details</string>
    <string name="quantity">Amount</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price">Price</string>
    <string name="comments3">comment</string>
    <string name="choose_properties">Choose Properties:-</string>
    <string name="pls_signin_signup">Please sign in or sign up</string>
    <string name="cart">Cart</string>
    <string name="total_items_cost">Total items cost</string>
    <string name="checkout">Check out</string>
    <string name="ch_item_prop">Choose item property</string>
    <string name="suc">Success!</string>
    <string name="state">State</string>
    <string name="payment_method">Payment method:-</string>
    <string name="cash">Cash</string>
    <string name="ch_country">Choose country</string>
    <string name="ch_city">Choose city</string>
    <string name="order_num">Order Number</string>
    <string name="status">Status</string>
    <string name="total">Total</string>
    <string name="order_details">Order details</string>
    <string name="amount">Amount</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="products">Products:-</string>
    <string name="details2">Details:-</string>
    <string name="delete">Delete</string>
    <string name="will_delete_cart">Will Delete products from cart</string>
    <string name="update_profile">Update profile</string>
    <string name="back">Back</string>
    <string name="no_search_results">No search results</string>
    <string name="already_have_an_account">Already have an account! Log in</string>
</resources>