<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_nav_home"
        />

    <item android:id="@+id/categories"
        android:title="@string/categories"
        android:icon="@drawable/ic_category"
        />

    <item android:id="@+id/offers"
        android:title="@string/offers"
        android:icon="@drawable/ic_offers"
        />

    <item android:id="@+id/orders"
        android:title="@string/orders"
        android:icon="@drawable/ic_orders"
        />

    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
</menu>