<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="model"
            type="com.wezain.models.OrderModel" />

        <variable
            name="country"
            type="String" />
        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/gray2"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".35"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/order_num"
                            android:textColor="@color/gray8"
                            android:textSize="15sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".65"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text='@{"#"+model.id}'
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".35"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/status"
                            android:textColor="@color/gray8"
                            android:textSize="15sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".65"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text='@{model.status}'
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".35"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/total"
                            android:textColor="@color/gray8"
                            android:textSize="15sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".65"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text='@{model.total_cost+" "+(model.bill_currency.equals("eg")?@string/tl:@string/aed)}'

                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </LinearLayout>


            </FrameLayout>

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/details"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
