<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />
        <variable
            name="country"
            type="String" />


        <variable
            name="model"
            type="com.wezain.models.OrderModel" />



        <import type="android.view.View" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray2"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/black"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:singleLine="true"
                        android:text="@string/order_details"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>



            </androidx.appcompat.widget.Toolbar>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fitsSystemWindows="true"
                android:fillViewport="true"
                android:scrollbars="none"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/products"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/details2"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"

                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_pin"
                            android:padding="2dp"
                            />
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/addresses"

                            />
                        <Space
                            android:layout_width="8dp"
                            android:layout_height="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/gray8"
                            android:text='@{model.city+"-"+model.state+"-"+model.address}'
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"

                        >



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/order_num"
                            />
                        <Space
                            android:layout_width="8dp"
                            android:layout_height="0dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/gray8"
                            android:text='@{"#"+model.id}'
                            />



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"

                        >



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/status"
                            />
                        <Space
                            android:layout_width="8dp"
                            android:layout_height="0dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/gray8"
                            android:text='@{model.status}'
                            />



                    </LinearLayout>





                </LinearLayout>


            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/llCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="visible"

                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/small_rounded_white_stroke"
                    android:paddingTop="5dp"
                    android:minHeight="56dp"

                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_gravity="center_vertical"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/gray8"
                            android:layout_weight=".5"
                            android:text="@string/total"
                            android:layout_gravity="top"
                            />

                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_weight=".5"
                            android:layout_gravity="top"
                            android:textStyle="bold"
                            android:text='@{model.total_cost+" "+(country.equals("eg")?@string/tl:@string/aed)}'



                            />


                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>


        </LinearLayout>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="visible"
            />
        <ProgressBar

            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</layout>
